[package]
name = "tg_prober"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.16.0", features = ["macros"] }
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
reqwest = { version = "0.12.22", features = ["json", "socks", "rustls-tls"] }
env_logger = "0.11.8"
chrono = { version = "0.4.41" }
log = { version = "0.4.27", features = ["serde"] }
futures = "0.3.31"
anyhow = "1.0.98"
poloto = "19.1.2"
image = "0.25.6"
resvg = { version = "0.45", features = [
    "text",          # enable `<text>` → path conversion via usvg/text
    "system-fonts",  # load system font files
    "memmap-fonts",  # optional: faster mmap-based font loading
    "raster-images"  # for embedded PNG/JPEG support
] }
fontdb = "0.23.0"
usvg-text-layout = "0.38"
regex = "1.11.1"          # <— SVG text layout